# OpenGLPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  CONTROLS.md  Camera.h  CubeFragmentShader.glsl  FileHelper.cpp  FileHelper.h  FragmentShader.glsl  LICENSE  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  LightSourceFragmentShader.glsl  LightVertexShader.glsl  Mesh.h  Model.h  ModelFragmentShader.glsl  README.md  Shader.cpp  Shader.h  TODOs.txt  VertexShader.glsl  imgui.ini  main.cpp  main.h  notes.txt  stb_image.cpp
src/: AsteroidBeltScene.cpp  AsteroidBeltScene.h  CMakeLists.txt  Camera.cpp  Camera.h  FileLocations.h  FirstPersonScene.h  FloorScene.cpp  FloorScene.h  GodModeScene.h  InfiniteCubeScene.cpp  InfiniteCubeScene.h  Input.cpp  Input.h  LearnOpenGLPlatform.h  Mesh.h  Model.h  NessCubesScene.cpp  NessCubesScene.h  ObjectData.cpp  ObjectData.h  PlaygroundScene.cpp  PlaygroundScene.h  ReflectRefractScene.cpp  ReflectRefractScene.h  ReflectionScene.cpp  ReflectionScene.h  RoomScene.cpp  RoomScene.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TextDebugShader.h  Util.cpp  Util.h  kernels.h  main.cpp  (+1 more)
src/common/: FileLocations.h  Input.cpp  Input.h  Kernels.h  ObjectData.cpp  ObjectData.h  OpenGLUtil.cpp  OpenGLUtil.h  Util.cpp  Util.h  WindowsFileHelper.h  glfwUtil.cpp  glfwUtil.h
src/common/shaders/fragment/: DepthBufferVisualizerFragmentShader.glsl  (+7 more)
src/scenes/: FirstPersonScene.cpp  FirstPersonScene.h  GodModeScene.cpp  GodModeScene.h  MultiScene.cpp  MultiScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scenes.h
src/scenes/AsteroidBelt/: AsteroidBeltScene.cpp  AsteroidBeltScene.h  TextureModelFragmentShader.glsl
src/scenes/Floor/: DirectionalLightShadowMapFragmentShader.glsl  FloorScene.cpp  FloorScene.h  LightSpaceVertexShader.glsl  TBNGeometryShader.glsl
src/scenes/FragmentShaderPlayground/: FragmentShaderPlaygroundScene.cpp  FragmentShaderPlaygroundScene.h  MandelbrotFragmentShader.glsl
src/scenes/GUIScene/: GUIScene.cpp  GUIScene.h
src/scenes/InfiniteCapsules/: InfiniteCapsulesFragmentShader.glsl  InfiniteCapsulesScene.cpp  InfiniteCapsulesScene.h
src/scenes/InfiniteCube/: BasicTextureFragmentShader.glsl  CropCenterSquareTexFragmentShader.glsl  DiscardAlphaFragmentShader.glsl  InfiniteCubeScene.cpp  InfiniteCubeScene.h
src/scenes/Kernel/: Kernel3x3TextureFragmentShader.glsl  Kernel5x5TextureFragmentShader.glsl  KernelScene.cpp  KernelScene.h
src/scenes/Mandelbrot/: HexagonPlaygroundFragmentShader.glsl  MandelbrotFragmentShader.glsl  MandelbrotScene.cpp  MandelbrotScene.h
src/scenes/MengerSponge/: CubePosNormTexVertexShader.glsl  CubeTextureFragmentShader.glsl  MengerSpongeFragmentShader.glsl  MengerSpongeScene.cpp  MengerSpongeScene.h
src/scenes/Moon/: BillboardPosTexVertexShader.glsl  DirectionalLightShadowMapFragmentShader.glsl  MoonScene.cpp  MoonScene.h  SimpleDepthVertexShader.glsl  TBNGeometryShader.glsl
src/scenes/Multi/: MultiScene.cpp  MultiScene.h
src/scenes/NessCube/: CubeFragmentShader.glsl  DirPosSpotLightModelFragmentShader.glsl  Kernel3x3TextureFragmentShader.glsl  Kernel5x5TextureFragmentShader.glsl  NessCubeFragmentShader.glsl  NessCubesScene.cpp  NessCubesScene.h
src/scenes/Pixel2D/: Pixel2DScene.cpp  Pixel2DScene.h  Pixel2DVertexShader.glsl
src/scenes/RayMarching/: RayMarchingFragmentShader.glsl  RayMarchingScene.cpp  RayMarchingScene.h
src/scenes/RayTracingSphere/: RayTracingSphereFragmentShader.glsl  RayTracingSphereScene.cpp  RayTracingSphereScene.h
src/scenes/ReflectRefract/: ExplodeGeometryShader.glsl  NormalVisualizer10InstanceVertexShader.glsl  NormalVisualizerVertexShader.glsl  PosNormal10InstanceVertexShader.glsl  ReflectRefractScene.cpp  ReflectRefractScene.h  SkyboxRefractionFragmentShader.glsl  TriangleNormalVisualizerGeometryShader.glsl
src/scenes/Room/: CubeMapGeometryShader.glsl  ModelMatVertexShader.glsl  PositionalLightShadowMapFragmentShader.glsl  RoomScene.cpp  RoomScene.h
src/shaders/: AsteroidVertexShader.glsl  BlinnPhongLightingFragmentShader.glsl  CropCenterSquareTexFragmentShader.glsl  CubeFragmentShader.glsl  CubeMapGeometryShader.glsl  DepthBufferVisualizerFragmentShader.glsl  DirPosSpotLightModelFragmentShader.glsl  DirectionalLightShadowMapFragmentShader.glsl  ExplodeGeometryShader.glsl  InfiniteCubeFragmentShader.glsl  Kernel3x3FrameBufferFragmentShader.glsl  KernelFrameBufferFragmentShader.glsl  LightFragmentShader.glsl  LightSpaceVertexShader.glsl  LinearDepthMapFragmentShader.glsl  ModelFragmentShader.glsl  ModelVertexShader.glsl  NormalVisualizerVertexShader.glsl  PosNormTexVertexShader.glsl  PosNormalVertexShader.glsl  PosTexNormalVertexShader.glsl  PosTexVertexShader.glsl  PosVertexShader.glsl  PositionalLightShadowMapFragmentShader.glsl  SingleColorFragmentShader.glsl  SkyboxReflectionFragmentShader.glsl  SkyboxReflectionVertexShader.glsl  SkyboxRefractionFragmentShader.glsl  SkyboxVertexShader.glsl  TextFragmentShader.glsl  TextVertexShader.glsl  TextureModelFragmentShader.glsl  TriangleNormalVisualizerGeometryShader.glsl
(+9 files in other folders)
